Add GitHub stars, search functionality, and pagination to blog page

--- a/example.env
+++ b/example.env
@@ -1,4 +1,6 @@
+HASHNODE_PUBLICATION_ID=your-hashnode-publication-id
 HASHNODE_TOKEN=your-hashnode-token
 HASHNODE_HOST=your-hashnode-host
 HASHNODE_GQL=https://gql.hashnode.com
 WEB3FORMS_API_KEY=your-web3forms-api-key
+GITHUB_TOKEN=your-github-token
