--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pages:build": "bunx @cloudflare/next-on-pages",
+    "preview": "bunx @cloudflare/next-on-pages && wrangler pages dev",
+    "deploy": "bunx @cloudflare/next-on-pages && wrangler pages deploy"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.5",
@@ -32,12 +35,14 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.23",
+    "eslint-plugin-next-on-pages": "^1.13.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
