--- a/package.json
+++ b/package.json
@@ -45,6 +45,11 @@
     "eslint-plugin-next-on-pages": "^1.13.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "39.1.1",
+    "wrangler": "^3.106.0"
+  },
+  "overrides": {
+    "vercel": "$vercel"
   }
 }
