--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
     "next-themes": "^0.4.4",
+    "parse-numeric-range": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-starry-night": "^2.2.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
@@ -36,9 +39,11 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.7",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.23",
